add_subdirectory(qpoases)
if(SOLVER_EIQUADPROG)
    add_subdirectory(eiquadprog)
endif()
if(SOLVER_QPSWIFT)
    add_subdirectory(qpswift)
endif()
if(SOLVER_PROXQP)
    add_subdirectory(proxqp)
endif()
if(SOLVER_OSQP)
    add_subdirectory(osqp)
endif()
if(SOLVER_HPIPM)
    add_subdirectory(hpipm)
endif()
